examples/datalog/09_recursion/78_path_with_cost.dl
% Test: Path with accumulated cost
% Expected: Sum costs along path
% Category: 09_recursion
% Priority: P2 - Recursion patterns

.kg create test_path_cost
.kg use test_path_cost

+edge[(1, 2, 10), (2, 3, 20), (3, 4, 15), (1, 3, 25)].

% Direct path cost
+path(X, Y, Cost) :- edge(X, Y, Cost).

% Extended path
+path(X, Z, TotalCost) :- path(X, Y, C1), edge(Y, Z, C2), TotalCost = C1 + C2.

?- path(1, X, C).

.kg use default
.kg drop test_path_cost
